--- a/registration_form/index.html
+++ b/registration_form/index.html
@@ -8,5 +8,12 @@
 </head>
 <body>
     <h1>Hello</h1>
+
+    <form action="" method="post">
+        <input type="text">
+        <input type="button" value="Send">
+        <input type="text">
+        <input type="button" value="Cancel">
+    </form>
 </body>
 </html>
